Added some images

--- a/albright_lab_1.ipynb
+++ b/albright_lab_1.ipynb
@@ -595,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "3e59561a",
    "metadata": {},
    "outputs": [
@@ -825,7 +825,7 @@
     }
    ],
    "source": [
-    "T_SECONDS = 2  # event must persist ≥30s\n",
+    "T_SECONDS = 20  # event must persist ≥30s\n",
     "\n",
     "thresholds = sigma_df.copy()\n",
     "thresholds[\"MinC\"] = thresholds[\"sigma\"] * 2.0   # Alert\n",
@@ -1183,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "d40b97ca",
    "metadata": {},
    "outputs": [
@@ -1214,7 +1214,7 @@
     "    yhat = lr.predict(t.reshape(-1,1)) # give scikit learn  the required 2D shape\n",
     "\n",
     "    # get residuals\n",
-    "    resid = test_resid_df[f\"{axis}_resid\"].loc[m].values\n",
+    "    resid = test_resid_df[f\"{axis}_resid\"].iloc[m].to_numpy()\n",
     "    MinC  = thr[axis][\"MinC\"]\n",
     "    MaxC  = thr[axis][\"MaxC\"]\n",
     "\n",
